--- a/src/svc-backscratcher/svc-backscratcher.csproj
+++ b/src/svc-backscratcher/svc-backscratcher.csproj
@@ -5,5 +5,9 @@
     <RootNamespace>svc_backscratcher</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+  </ItemGroup>
+
 
 </Project>
