--- a/src/svc-backscratcher/appsettings.json
+++ b/src/svc-backscratcher/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "PostgreSqlDataAccessOptions": {
+    "Host": "host.docker.internal",
+    "Port": 5432,
+    "Username": "postgres",
+    "Database": "backscratcher"
+  },
   "AllowedHosts": "*"
 }
