fix: updated appsetting files

--- a/src/svc-backscratcher/appsettings.json
+++ b/src/svc-backscratcher/appsettings.json
@@ -10,6 +10,7 @@
     "Host": "host.docker.internal",
     "Port": 5432,
     "Username": "postgres",
+    "Password": "*DwLo8#FiSitaq8R#jUP",
     "Database": "backscratcher"
   },
   "AllowedHosts": "*"
