--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,18 +36,15 @@ workflows:
   run-unit-tests: 
     jobs:
       - build-and-test
-      # - aws-ecr/build-and-push-image:
-      #     account-url: AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME
-      #     aws-access-key-id: ACCESS_KEY_ID_ENV_VAR_NAME
-      #     aws-secret-access-key: SECRET_ACCESS_KEY_ENV_VAR_NAME
-      #     context: myContext
-      #     create-repo: true
-      #     dockerfile: myDockerfile
-      #     no-output-timeout: 20m
-      #     path: pathToMyDockerfile
-      #     profile-name: myProfileName
-      #     region: AWS_REGION_ENV_VAR_NAME
-      #     repo: myECRRepository
-      #     skip-when-tags-exist: false
-      #     tag: 'latest,myECRRepoTag'
+      - aws-ecr/build-and-push-image:
+          requires:
+            - build-and-test
+          repo: "${AWS_RESOURCE_NAME_PREFIX}"
+          tag: "${CIRCLE_SHA1}"
+      - aws-ecs/deploy-service-update:
+          requires:
+            - aws-ecr/build-and-push-image # only run this job once aws-ecr/build-and-push-image has completed
+          family: "${AWS_RESOURCE_NAME_PREFIX}-service"
+          cluster-name: "${AWS_RESOURCE_NAME_PREFIX}-cluster"
+          container-image-name-updates: "container=${AWS_RESOURCE_NAME_PREFIX}-service,tag=${CIRCLE_SHA1}"
 
