--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,8 @@ workflows:
       - aws-ecr/build-and-push-image:
           requires:
             - build-and-test
-          path: ./src/svc-backscratcher
+          context: .
+          path: src/svc-backscratcher
           repo: "${AWS_RESOURCE_NAME_PREFIX}"
           tag: "${CIRCLE_SHA1}"
       - aws-ecs/deploy-service-update:
