--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,11 @@ jobs:
       - checkout
       # Then simply use the dotnet container as you'd expect and run your tests
       - run:
+          working_directory: .
+          name: check working directory
+          command: |
+            ls
+      - run:
           # Update this line with the directory that contains your tests project file
           working_directory: tests/svc-backscratcher-tests 
           name: dotnet test
@@ -37,8 +42,6 @@ workflows:
       - aws-ecr/build-and-push-image:
           requires:
             - build-and-test
-          context: src/svc-backscratcher
-          path: src/svc-backscratcher
           repo: "${AWS_RESOURCE_NAME_PREFIX}"
           tag: "${CIRCLE_SHA1}"
       - aws-ecs/deploy-service-update:
