--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - checkout
       # Then simply use the dotnet container as you'd expect and run your tests
       - run:
-          working_directory: .
+          working_directory: ./src/svc-backscratcher
           name: check working directory
           command: |
             ls
