feat: added circleci pipeline (#1)
* fix: updated docker image

* fix: added ecr orb

* fix: updated .gitignore

* feat: added ecr and ecs jobs

* fix: updated ecr and ecs orbs settings

* fix: updated spacing

* test: updated ecr path parameter

* test: removed ecr path parameter

* test: updated ecr path parameter

* test: added ecr context parameter

* test: updated ecr path parameter

* test: updated both context and path

* test: added step to check working directory

* test: updated working directory

* test: updated path again

* fix: updated Dockerfile

Co-authored-by: Jeffrey Siu <jeffrey.siu@ihsmarkit.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,11 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+orbs:
+  aws-ecr: circleci/aws-ecr@7.0.0
+  aws-ecs: circleci/aws-ecs@2.2.1
+  aws-cli: circleci/aws-cli@2.0.2
+
 jobs:
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
   build-and-test:  
@@ -9,24 +14,41 @@ jobs:
     # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # Be sure to update the tag on this image to a more stable version, using latest can result in unstable builds.
     docker:
-      - image: microsoft/dotnet:latest
+      - image: mcr.microsoft.com/dotnet/sdk:3.1
     steps:
       # Checkout the code as the first step.
       - checkout
       # Then simply use the dotnet container as you'd expect and run your tests
       - run:
+          working_directory: ./src/svc-backscratcher
+          name: check working directory
+          command: |
+            ls
+      - run:
           # Update this line with the directory that contains your tests project file
           working_directory: tests/svc-backscratcher-tests 
-          name: Run tests
+          name: dotnet test
           command: |
             dotnet test
-            
 
 workflows:
   # Below is the definition of your workflow.
   # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
   # CircleCI will run this workflow on every commit.
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
-  sample: 
+  deploy: 
     jobs:
       - build-and-test
+      - aws-ecr/build-and-push-image:
+          requires:
+            - build-and-test
+          path: ./src/svc-backscratcher
+          repo: "${AWS_RESOURCE_NAME_PREFIX}"
+          tag: "${CIRCLE_SHA1}"
+      - aws-ecs/deploy-service-update:
+          requires:
+            - aws-ecr/build-and-push-image # only run this job once aws-ecr/build-and-push-image has completed
+          family: "${AWS_RESOURCE_NAME_PREFIX}-service"
+          cluster-name: "${AWS_RESOURCE_NAME_PREFIX}-cluster"
+          container-image-name-updates: "container=${AWS_RESOURCE_NAME_PREFIX}-service,tag=${CIRCLE_SHA1}"
+
