fix: updated db connectionstring

--- a/src/svc-backscratcher/appsettings.Development.json
+++ b/src/svc-backscratcher/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "PostgreSqlDataAccessOptions": {
-    "Host": "localhost"
+    "Host": "db-backscratcher.cxufqupfvwrh.us-east-1.rds.amazonaws.com"
   }
 }
