--- a/src/svc-backscratcher/appsettings.json
+++ b/src/svc-backscratcher/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "PostgreSqlDataAccessOptions": {
-    "Host": "host.docker.internal",
+    "Host": "db-backscratcher.cxufqupfvwrh.us-east-1.rds.amazonaws.com",
     "Port": 5432,
     "Username": "postgres",
     "Password": "*DwLo8#FiSitaq8R#jUP",
