fix: updated RDS host and healthchecks controller

--- a/src/svc-backscratcher/appsettings.Development.json
+++ b/src/svc-backscratcher/appsettings.Development.json
@@ -1,5 +1,9 @@
 {
-  "PostgreSqlDataAccessOptions": {
-    "Host": "db-backscratcher.cxufqupfvwrh.us-east-1.rds.amazonaws.com"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
   }
 }
