--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,18 @@ orbs:
   aws-cli: circleci/aws-cli@2.0.2
 
 jobs:
+  copy-password-from-env:
+    docker:
+      - image: alpine
+    steps:
+      - checkout
+      - run:
+          working_directory: ./src/svc-backscratcher
+          name: copy password from project environment variable
+          command: |
+            sed 's/#{db-backscratcher-password}#/ENV-DB-PASSWORD' appsettings.json
+          
+
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
   build-and-test:  
     # These next lines define a Docker executor: https://circleci.com/docs/2.0/executor-types/
